--- a/api/v1/swagger/paths/holds.yaml
+++ b/api/v1/swagger/paths/holds.yaml
@@ -380,6 +380,12 @@
     summary: Cancel hold
     parameters:
       - $ref: "../swagger.yaml#/parameters/hold_id_pp"
+      - name: body
+        in: body
+        description: Cancellation reason
+        required: false
+        schema:
+          type: string
     produces:
       - application/json
     responses:
