Bug 5312: Allow additional properties for item in api (sub_location fix)

--- a/api/v1/swagger/definitions/item.yaml
+++ b/api/v1/swagger/definitions/item.yaml
@@ -228,7 +228,7 @@ properties:
       - object
       - "null"
     description: A return claims object if one exists that's unresolved
-additionalProperties: false
+additionalProperties: true
 required:
   - item_id
   - biblio_id
