--- a/.github/ISSUE_TEMPLATE/versiobugi.yaml
+++ b/.github/ISSUE_TEMPLATE/versiobugi.yaml
@@ -33,3 +33,10 @@ body:
       Vinkki: Voit liittää kuvia tai tiedostoja klikkaamalla tätä aluetta ja vetämällä kuvan tai tiedoston tänne.
   validations:
     required: false
+- type: textarea
+  attributes:
+    label: Asiasanat/tagit
+    description: |
+     Lisää tähän asiasanoja/tageja, joilla tätä tikettiä voisi ajatella hakevansa. GitHubin haku ei osaa katkaista sanoja.
+  validations:
+    required: false
